Fixed overflow and removed superfluous permissions

--- a/CBE_Chrome_Extension/css/style.css
+++ b/CBE_Chrome_Extension/css/style.css
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden;
   margin-top: -20px;
   width:780px;
   height:580px;
